@startuml

class BigNum {
    -num : BIGNUM
    +BigNum()
    +BigNum(other: BigNum)
    +BigNum(data: vector<uint8_t>)
    +BigNum(bn: BIGNUM*)
    +~BigNum()
    +operator+(other: BigNum)
    +ToString() : string
}

class ECGroup {
    -group: EC_GROUP
    -fieldSize: size_t
    +ECGroup(fieldSize: size_t)
    +ECGropu(other: ECGroup)
    +~ECGroup()
    +FieldSize() : size_t
    +FieldSizeInBytes() : size_t
    +Group() : EC_GROUP*
}

class ECPoint {
    -group: shared_ptr<ECGroup>
    -point: EC_POINT*
    -x: BigNum
    -y: BigNum

    +ECPoint()
    +~ECPoint()
    +XCoord() : BigNum
    +YCoord() : BigNum
    +ToString() : string
}

class EllipticCurve {
    -group: shared_ptr<ECGroup>
    -ctx : BN_CTX

    +RandomScalar() : BIGNUM
    +RandomPoint() : ECPoint
    +Point(rawData: vector<uint8_t>) : ECPoint
    +Point(x: vector<uint8_t>, ybit: uint8_t) : ECPoint
    +Point2Vec(point: ECPoint) : vector<uint8_t>
    +Point2VecCompressed(point: ECPoint) : vector<uint8_t>
    +IsValidPoint(ECPoint) : bool
    +Add(ECPoint, ECPoint) : ECPoint
    +Multiply(BigNum, ECPoint) : ECPoint
}

EllipticCurve *-- ECGroup
EllipticCurve -- ECPoint
EllipticCurve -- BigNum

ECPoint *-- ECGroup
ECPoint -- BigNum

@enduml